@@ -25,7 +25,7 @@ import static org.hamcrest.CoreMatchers.equalTo;
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.MatcherAssert.assertThat;
 
-import java.util.Collections;
+import java.util.Map;
 
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
@@ -40,56 +40,56 @@ import org.apache.qpid.server.store.MessageStore;
 import org.apache.qpid.server.store.TestMemoryMessageStore;
 import org.apache.qpid.test.utils.UnitTestBase;
 
-public class AMQMessageMutatorTest extends UnitTestBase
+class AMQMessageMutatorTest extends UnitTestBase
 {
     private static final byte TEST_PRIORITY = (byte) 1;
     private static final String TEST_HEADER_NAME = "foo";
     private static final String TEST_HEADER_VALUE = "bar";
     private static final String TEST_CONTENT_TYPE = "text/plain";
     private static final String TEST_CONTENT = "testContent";
+
     private MessageStore _messageStore;
     private AMQMessageMutator _messageMutator;
 
     @BeforeEach
-    public void setUp() throws Exception
+    void setUp() throws Exception
     {
         _messageStore = new TestMemoryMessageStore();
         final AMQMessage message = createTestMessage();
         _messageMutator = new AMQMessageMutator(message, _messageStore);
     }
 
-
     @AfterEach
-    public void tearDown()
+    void tearDown()
     {
         _messageStore.closeMessageStore();
     }
 
     @Test
-    public void setPriority()
+    void setPriority()
     {
         _messageMutator.setPriority((byte) (TEST_PRIORITY + 1));
         assertThat(_messageMutator.getPriority(), is(equalTo((byte) (TEST_PRIORITY + 1))));
     }
 
     @Test
-    public void getPriority()
+    void getPriority()
     {
         assertThat((int) _messageMutator.getPriority(), is(equalTo((int) TEST_PRIORITY)));
     }
 
     @Test
-    public void create()
+    void create()
     {
         _messageMutator.setPriority((byte) (TEST_PRIORITY + 1));
 
-        AMQMessage newMessage = _messageMutator.create();
+        final AMQMessage newMessage = _messageMutator.create();
 
         assertThat(newMessage.getMessageHeader().getPriority(), is(equalTo((byte) (TEST_PRIORITY + 1))));
         assertThat(newMessage.getMessageHeader().getMimeType(), is(equalTo(TEST_CONTENT_TYPE)));
         assertThat(newMessage.getMessageHeader().getHeader(TEST_HEADER_NAME), is(equalTo(TEST_HEADER_VALUE)));
 
-        QpidByteBuffer content = newMessage.getContent();
+        final QpidByteBuffer content = newMessage.getContent();
 
         final byte[] bytes = new byte[content.remaining()];
         content.copyTo(bytes);
@@ -100,18 +100,17 @@ public class AMQMessageMutatorTest extends UnitTestBase
     {
         final BasicContentHeaderProperties basicContentHeaderProperties = new BasicContentHeaderProperties();
         basicContentHeaderProperties.setPriority(TEST_PRIORITY);
-        basicContentHeaderProperties.setHeaders(FieldTableFactory.createFieldTable(Collections.singletonMap(
-                TEST_HEADER_NAME,
-                TEST_HEADER_VALUE)));
+        basicContentHeaderProperties
+                .setHeaders(FieldTableFactory.createFieldTable(Map.of(TEST_HEADER_NAME, TEST_HEADER_VALUE)));
         basicContentHeaderProperties.setContentType(TEST_CONTENT_TYPE);
 
-        QpidByteBuffer content = QpidByteBuffer.wrap(TEST_CONTENT.getBytes(UTF_8));
+        final QpidByteBuffer content = QpidByteBuffer.wrap(TEST_CONTENT.getBytes(UTF_8));
 
         final ContentHeaderBody contentHeader = new ContentHeaderBody(basicContentHeaderProperties, content.remaining());
         final MessagePublishInfo publishInfo = new MessagePublishInfo(AMQShortString.valueOf("testExchange"),
-                                                                      true,
-                                                                      true,
-                                                                      AMQShortString.valueOf("testRoutingKey"));
+                true,
+                true,
+                AMQShortString.valueOf("testRoutingKey"));
         final MessageMetaData messageMetaData =
                 new MessageMetaData(publishInfo, contentHeader, System.currentTimeMillis());
         final MessageHandle<MessageMetaData> handle = _messageStore.addMessage(messageMetaData);
